[gd_scene load_steps=6 format=2]

[ext_resource path="res://LobbyEntry.gd" type="Script" id=1]
[ext_resource path="res://fonts/RobotoLight-32px.tres" type="DynamicFont" id=2]
[ext_resource path="res://components/Button/Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://components/Button/Filled.tres" type="StyleBox" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.917647, 0.929412, 0.913725, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 16

[node name="LobbyEntry" type="Panel"]
anchor_right = 1.0
margin_left = 10.0
margin_top = 45.0
margin_right = -12.0
margin_bottom = 121.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="Name" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 10.0
margin_top = -19.0
margin_right = 447.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Name"
valign = 1

[node name="Button" parent="." instance=ExtResource( 3 )]
margin_left = 432.0
mouse_filter = 1
custom_styles/panel = ExtResource( 4 )
text = "Join"
filled = true

[connection signal="gui_input" from="." to="." method="_on_LobbyTemplate_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_LobbyTemplate_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_LobbyTemplate_mouse_exited"]
